# swaggerv2/swagger_server/swagger/swagger.yaml
@@ -80,6 +80,14 @@ paths:
           \ pdf parameter is missing from request."
         required: false
         type: "file"
+      - name: "images"
+        in: "formData"
+        description: "multiple file content. We will consider imageN parameters only"
+        required: false
+        type: "array"
+        items:
+          type: "string"
+          format: "binary"
       - name: "image0"
         in: "formData"
         required: false
@@ -230,6 +238,39 @@ paths:
           description: "Cat not found"
       x-swagger-router-controller: "swagger_server.controllers.cat_controller"
 definitions:
+  Book:
+    required:
+    - "ISBN"
+    - "authorid"
+    - "category"
+    - "edition"
+    - "price"
+    - "title"
+    properties:
+      ISBN:
+        type: "string"
+        example: "978-3-16-148410-0"
+        description: "ISBN number of the book"
+      title:
+        type: "string"
+        description: "Name of the book"
+      edition:
+        type: "integer"
+      price:
+        type: "integer"
+      category:
+        type: "string"
+        description: "Category of the book"
+        enum:
+        - "noval"
+        - "general"
+        - "story"
+      authorid:
+        type: "string"
+      details:
+        type: "string"
+    title: "Book"
+    description: "A book"
   Cat:
     required:
     - "breed"
@@ -251,67 +292,6 @@ definitions:
         - "American Curl"
         - "American Shorthair"
         - "American Wirehair"
-        - "Arabian Mau"
-        - "Australian Mist"
-        - "Balinese"
-        - "Bambino"
-        - "Bengal"
-        - "Birman"
-        - "Bombay"
-        - "British Longhair"
-        - "British Shorthair"
-        - "Burmese"
-        - "Burmilla"
-        - "California Spangled"
-        - "Chantilly-Tiffany"
-        - "Chartreux"
-        - "Chausie"
-        - "Cheetoh"
-        - "Colorpoint Shorthair"
-        - "Cornish Rex"
-        - "Cymric"
-        - "Cyprus"
-        - "Devon Rex"
-        - "Donskoy"
-        - "Dragon Li"
-        - "Egyptian Mau"
-        - "European Burmese"
-        - "Exotic Shorthair"
-        - "Havana Brown"
-        - "Himalayan"
-        - "Japanese Bobtail"
-        - "Javanese"
-        - "Khao Manee"
-        - "Korat"
-        - "Kurilian"
-        - "LaPerm"
-        - "Maine Coon"
-        - "Malayan"
-        - "Manx"
-        - "Munchkin"
-        - "Nebelung"
-        - "Norwegian Forest Cat"
-        - "Ocicat"
-        - "Oriental"
-        - "Persian"
-        - "Pixie-bob"
-        - "Ragamuffin"
-        - "Ragdoll"
-        - "Russian Blue"
-        - "Savannah"
-        - "Scottish Fold"
-        - "Selkirk Rex"
-        - "Siamese"
-        - "Siberian"
-        - "Singapura"
-        - "Snowshoe"
-        - "Somali"
-        - "Sphynx"
-        - "Tonkinese"
-        - "Toyger"
-        - "Turkish Angora"
-        - "Turkish Van"
-        - "York Chocolate"
     title: "Cat"
     description: "A cat"
     example:
